Fix grid item size/align

--- a/style.css
+++ b/style.css
@@ -127,10 +127,13 @@ svg {
     .testimonials {
         padding-block: unset;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, minmax(auto, 300px));
-        align-items: start;
+        grid-template-rows: repeat(2, 290px);
         column-gap: 1.5rem;
         row-gap: .8rem;
+    }
+
+    .testimonials > * {
+        align-self: stretch;
     }
 
     .testimonial-01 {
@@ -139,11 +142,11 @@ svg {
 
     .testimonial-04 {
         grid-column: 2 / 4;
-        grid-row: 2;
+        grid-row: 2 / -1;
     }
 
     .testimonial-05 {
         grid-column: 4 / 5;
-        grid-row: 1;
+        grid-row: 1 / 3;
     }
 }
